objects/APL_Filter_Domain_Values__c.object
<CustomObject>
    <fields>
        <fullName>APL_Filter__c</fullName>
        <label>APL Filter</label>
        <referenceTo>APL_Filter__c</referenceTo>
        <relationshipLabel>APL Filter Domain Values</relationshipLabel>
        <relationshipName>APL_Filter_Domain_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Condition_Clause_SOQL__c</fullName>
        <label>Condition Clause SOQL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disable_Children_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Children Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Group_Access__c</fullName>
        <description>set access for defined public groups</description>
        <label>Public Group Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APL Management</fullName>
                </value>
                <value>
                    <fullName>APL China FE Group</fullName>
                </value>
                <value>
                    <fullName>APL EMEA Team</fullName>
                </value>
                <value>
                    <fullName>ITBconsult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>APL Filter Domain Values</label>
    <nameField>
        <displayFormat>AFDV-{000000}</displayFormat>
        <label>APL Filter Domain Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APL_Filter_Domain_Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>